# Mandelbrot

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  ComplexSelectDlg.cpp  ComplexSelectDlg.h  MainFrm.cpp  MainFrm.h  Mandelbrot.cpp  Mandelbrot.h  Mandelbrot.rc  Mandelbrot.sln  Mandelbrot.vcxproj  Mandelbrot.vcxproj.filters  MandelbrotDoc.cpp  MandelbrotDoc.h  MandelbrotView.cpp  MandelbrotView.h  README.md  apply_format.ps1  apply_format.sh  build.bat  build.sh  clean.bat  cmake.sh  configure.bat  configure.sh  cpp.hint  fixed_point.h  fixed_point128.h  float128.h  framework.h  install.bat  install.sh  pch.h  qt_env_llvm_windows.bat  qt_env_macos.sh  rebuild.bat  rebuild.sh  resource.h  (+1 more)
.claude/: settings.local.json
mpir/: longlong.h  mpir.h  mpir.lib  mpirxx.h  mpirxx.lib
res/: Mandelbrot.rc2
src/: CMakeLists.txt  DebugProps.props  Mandelbrot.rc  Mandelbrot.vcxproj  Mandelbrot.vcxproj.filters  QJuliaSetOptions.cpp  QJuliaSetOptions.h  QJuliaSetOptions.ui  QMandelbrotWidget.cpp  QMandelbrotWidget.h  QtMainWindow.cpp  QtMainWindow.h  QtMainWindow.ui  ReleaseProps.props  SharedProps.props  fixed_point128.h  fixed_point128_shared.h  main.cpp  pch.cpp  pch.h  resource.h
src/res/icons/: Mandelbrot.icns
